--- a/src/components/Products/ProductsList/ProductsList.module.scss
+++ b/src/components/Products/ProductsList/ProductsList.module.scss
@@ -25,6 +25,13 @@
 
 .list-item {
   width: 100%;
+
+  @media screen and (min-width: 480px) {
+    width: 448px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 352px;
+  }
 }
 
 .goBackButton {
